readability update and position notice

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org3a05b6c">About</a></li>
-<li><a href="#org0f596f8">Disclaimer</a>
+<li><a href="#org1f9d71e">About</a></li>
+<li><a href="#org262cb56">Disclaimer</a>
 <ul>
-<li><a href="#org5e7bb44">Not Financial Advice</a></li>
-<li><a href="#org65b6fe5">Conflict of Interest</a></li>
-<li><a href="#orgda4cb5c">Monetisation</a></li>
+<li><a href="#orga0b2576">Not Financial Advice</a></li>
+<li><a href="#orgd1e329e">Conflict of Interest</a></li>
+<li><a href="#org632ed84">Monetisation</a></li>
 </ul>
 </li>
 </ul>
@@ -49,9 +49,9 @@ The author asserts that the average quality of existing research is low and, tha
 This site is a channel for the author to publish analysis with the goal of correcting the aforementioned issues. The analysis should culminate in transparent and actionable investment decisions. 
 </p>
 
-<div id="outline-container-org3a05b6c" class="outline-2">
-<h2 id="org3a05b6c">About</h2>
-<div class="outline-text-2" id="text-org3a05b6c">
+<div id="outline-container-org1f9d71e" class="outline-2">
+<h2 id="org1f9d71e">About</h2>
+<div class="outline-text-2" id="text-org1f9d71e">
 <p>
 The author of this site is an industry professional that is passionate about financial markets. However, a strong argument can stand on its own legs without resting on the credentials of the author.
 </p>
@@ -62,31 +62,31 @@ The purpose of this website is not to gather views, to spread a message or to ca
 </div>
 </div>
 
-<div id="outline-container-org0f596f8" class="outline-2">
-<h2 id="org0f596f8">Disclaimer</h2>
-<div class="outline-text-2" id="text-org0f596f8">
+<div id="outline-container-org262cb56" class="outline-2">
+<h2 id="org262cb56">Disclaimer</h2>
+<div class="outline-text-2" id="text-org262cb56">
 </div>
-<div id="outline-container-org5e7bb44" class="outline-3">
-<h3 id="org5e7bb44">Not Financial Advice</h3>
-<div class="outline-text-3" id="text-org5e7bb44">
+<div id="outline-container-orga0b2576" class="outline-3">
+<h3 id="orga0b2576">Not Financial Advice</h3>
+<div class="outline-text-3" id="text-orga0b2576">
 <p>
 <i>The Content is only for informational purposes and should not be construed as legal, tax, investment, financial, or other advice. Nothing contained on this Site constitutes a solicitation, recommendation, endorsement, or offer to buy or sell any securities or other financial instruments. There are risks associated with investing in securities which include complete loss of capital.</i>
 </p>
 </div>
 </div>
 
-<div id="outline-container-org65b6fe5" class="outline-3">
-<h3 id="org65b6fe5">Conflict of Interest</h3>
-<div class="outline-text-3" id="text-org65b6fe5">
+<div id="outline-container-orgd1e329e" class="outline-3">
+<h3 id="orgd1e329e">Conflict of Interest</h3>
+<div class="outline-text-3" id="text-orgd1e329e">
 <p>
 <i>The author is an active industry professional. For the avoidance of conflicts of interest, no companies that are analysed for the benefit of the employer will be discussed on this site. The author further holds personal positions which will be disclosed when the investment is being discussed.</i>
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgda4cb5c" class="outline-3">
-<h3 id="orgda4cb5c">Monetisation</h3>
-<div class="outline-text-3" id="text-orgda4cb5c">
+<div id="outline-container-org632ed84" class="outline-3">
+<h3 id="org632ed84">Monetisation</h3>
+<div class="outline-text-3" id="text-org632ed84">
 <p>
 <i>This site is not currently in any way monetised.</i>
 </p>
