--- a/macro.html
+++ b/macro.html
@@ -21,16 +21,16 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orge0f00e1">Currency Devaluation - 26/03/2024</a>
+<li><a href="#orgc03e948">Currency Devaluation - 26/03/2024</a>
 <ul>
-<li><a href="#orgb99be5e">Positioning - 26/03/2024</a></li>
+<li><a href="#orga6fab80">Positioning - 26/03/2024</a></li>
 </ul>
 </li>
-<li><a href="#org1868462">Disclaimer</a>
+<li><a href="#org7f184e6">Disclaimer</a>
 <ul>
-<li><a href="#orgaa49910">Not Financial Advice</a></li>
-<li><a href="#org191a280">Conflict of Interest</a></li>
-<li><a href="#org7b65d7e">Monetisation</a></li>
+<li><a href="#orgfd8812c">Not Financial Advice</a></li>
+<li><a href="#orgb731b27">Conflict of Interest</a></li>
+<li><a href="#org2375799">Monetisation</a></li>
 </ul>
 </li>
 </ul>
@@ -40,37 +40,37 @@
 <li><a href="./index.html">Home</a></li>
 </ul>
 
-<div id="outline-container-orge0f00e1" class="outline-2">
-<h2 id="orge0f00e1">Currency Devaluation - 26/03/2024</h2>
-<div class="outline-text-2" id="text-orge0f00e1">
+<div id="outline-container-orgc03e948" class="outline-2">
+<h2 id="orgc03e948">Currency Devaluation - 26/03/2024</h2>
+<div class="outline-text-2" id="text-orgc03e948">
 <p>
 While by no means a new topic, currency devaluation remains the most important issue that is embarrassingly absent from the major financial outlets. This week saw a major shift in the messaging from central banks, <b>indicating that they are likely to accept an elevated, and perhaps even rising, level of inflation rather than hiking rates further</b>.
 </p>
 
 <p>
-The Swiss National Bank (SNB) cut interest rates ahead of other major central banks and while the Bank of Japan (BoJ) did announce their first rate hike in decades, it came delivered with dovish messaging more in line with the SNB, the Yen subsequently weakened further. The Federal Reserve (FED) announced arguably the most important piece of central bank news with their dot-plot expectations of future interest rate cuts relatively intact, even in the face of hotter than expected inflation.
+The Swiss National Bank (SNB) cut interest rates ahead of other major central banks and while the Bank of Japan (BoJ) did announce their first rate hike in decades, it came delivered with dovish messaging more in line with the SN. The Yen subsequently weakened further. The Federal Reserve (FED) announced arguably the most important piece of central bank news with their dot-plot expectations of future interest rate cuts relatively intact, even in the face of hotter than expected inflation.
 </p>
 
 <p>
-Central banks generally try to avoid flip-flopping due to the damage it can cause to their credibility. In this effort towards transparency and predictability, the FED e.g. launched the dot-plot in 2012 to regularly announce their monetary policy forecast. This implies that potentially upcoming rate cuts are unlikely to be followed by hikes shortly thereafter.
+Central banks generally try to avoid flip-flopping due to the damage it can cause to their credibility. In this effort towards transparency and predictability, the FED launched the dot-plot in 2012 to regularly announce their monetary policy forecast. This implies that the potentially upcoming rate cuts are unlikely to be followed by hikes shortly thereafter.
 </p>
 
 <p>
-They are effectively prioritising providing support for the government and worsening debt situation, rather than strengthening the currency. 
+They are effectively prioritising providing support for the government and the worsening debt situation, rather than strengthening the currency. 
 </p>
 
 <p>
-The market reaction to this information was not surprising and inflation resistant assets caught a bid. While some investors may hesitate to invest in recently well performing assets such as Gold and Bitcoin due to historically high prices, until the main investment thesis changes the author continues to be bullish on these assets.
+The market reaction to this information was not surprising and inflation resistant assets caught a bid. While some investors may hesitate to invest in recently well performing assets such as Gold and Bitcoin due to historically high prices, the author continues to be bullish on these assets until the main investment thesis changes.
 </p>
 
 <p>
-The main investment thesis will be fleshed out in coming posts but in short, central banks have painted themselves into a corner with decades of stimulatory policies, the governments have simultaneously got themselves caught in an ever increasing debt spiral, to fund the perception of economic growth (here with particular focus on the U.S. government). Central banks are facing with the dilemma of saving the government or the currency, indications point towards the former. 
+The main investment thesis will be fleshed out in coming posts but in short, central banks have painted themselves into a corner with decades of stimulatory policies, the governments have simultaneously got themselves caught in an ever increasing debt spiral, to fund the perception of economic growth (here with particular focus on the U.S. government). Central banks are faced with the dilemma of saving the government or the currency, indications point towards the former. 
 </p>
 </div>
 
-<div id="outline-container-orgb99be5e" class="outline-3">
-<h3 id="orgb99be5e">Positioning - 26/03/2024</h3>
-<div class="outline-text-3" id="text-orgb99be5e">
+<div id="outline-container-orga6fab80" class="outline-3">
+<h3 id="orga6fab80">Positioning - 26/03/2024</h3>
+<div class="outline-text-3" id="text-orga6fab80">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -102,35 +102,39 @@ The main investment thesis will be fleshed out in coming posts but in short, cen
 </tr>
 </tbody>
 </table>
+
+<p>
+<i>The author holds long positions in both Gold and BTC, details on allocation and investment vehicle choice might be shared in future updates.</i>
+</p>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org1868462" class="outline-2">
-<h2 id="org1868462">Disclaimer</h2>
-<div class="outline-text-2" id="text-org1868462">
+<div id="outline-container-org7f184e6" class="outline-2">
+<h2 id="org7f184e6">Disclaimer</h2>
+<div class="outline-text-2" id="text-org7f184e6">
 </div>
-<div id="outline-container-orgaa49910" class="outline-3">
-<h3 id="orgaa49910">Not Financial Advice</h3>
-<div class="outline-text-3" id="text-orgaa49910">
+<div id="outline-container-orgfd8812c" class="outline-3">
+<h3 id="orgfd8812c">Not Financial Advice</h3>
+<div class="outline-text-3" id="text-orgfd8812c">
 <p>
 <i>The Content is only for informational purposes and should not be construed as legal, tax, investment, financial, or other advice. Nothing contained on this Site constitutes a solicitation, recommendation, endorsement, or offer to buy or sell any securities or other financial instruments. There are risks associated with investing in securities which include complete loss of capital.</i>
 </p>
 </div>
 </div>
 
-<div id="outline-container-org191a280" class="outline-3">
-<h3 id="org191a280">Conflict of Interest</h3>
-<div class="outline-text-3" id="text-org191a280">
+<div id="outline-container-orgb731b27" class="outline-3">
+<h3 id="orgb731b27">Conflict of Interest</h3>
+<div class="outline-text-3" id="text-orgb731b27">
 <p>
 <i>The author is an active industry professional. For the avoidance of conflicts of interest, no companies that are analysed for the benefit of the employer will be discussed on this site. The author further holds personal positions which will be disclosed when the investment is being discussed.</i>
 </p>
 </div>
 </div>
 
-<div id="outline-container-org7b65d7e" class="outline-3">
-<h3 id="org7b65d7e">Monetisation</h3>
-<div class="outline-text-3" id="text-org7b65d7e">
+<div id="outline-container-org2375799" class="outline-3">
+<h3 id="org2375799">Monetisation</h3>
+<div class="outline-text-3" id="text-org2375799">
 <p>
 <i>This site is not currently in any way monetised.</i>
 </p>
