--- a/fundamental.html
+++ b/fundamental.html
@@ -20,20 +20,20 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org8e58d83">Fundamental Analysis</a></li>
-<li><a href="#org83cfedf">Disclaimer</a>
+<li><a href="#org635c4bb">Fundamental Analysis</a></li>
+<li><a href="#org686e26a">Disclaimer</a>
 <ul>
-<li><a href="#orgac9b2a8">Not Financial Advice</a></li>
-<li><a href="#org7054635">Conflict of Interest</a></li>
-<li><a href="#org882d09c">Monetisation</a></li>
+<li><a href="#orgc78fe60">Not Financial Advice</a></li>
+<li><a href="#orgd4c6b23">Conflict of Interest</a></li>
+<li><a href="#orgeb79524">Monetisation</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org8e58d83" class="outline-2">
-<h2 id="org8e58d83">Fundamental Analysis</h2>
-<div class="outline-text-2" id="text-org8e58d83">
+<div id="outline-container-org635c4bb" class="outline-2">
+<h2 id="org635c4bb">Fundamental Analysis</h2>
+<div class="outline-text-2" id="text-org635c4bb">
 <ul class="org-ul">
 <li><a href="./index.html">Home</a></li>
 </ul>
@@ -44,31 +44,31 @@ The author will at times perform deeper dives into potential investments that fi
 </div>
 </div>
 
-<div id="outline-container-org83cfedf" class="outline-2">
-<h2 id="org83cfedf">Disclaimer</h2>
-<div class="outline-text-2" id="text-org83cfedf">
+<div id="outline-container-org686e26a" class="outline-2">
+<h2 id="org686e26a">Disclaimer</h2>
+<div class="outline-text-2" id="text-org686e26a">
 </div>
-<div id="outline-container-orgac9b2a8" class="outline-3">
-<h3 id="orgac9b2a8">Not Financial Advice</h3>
-<div class="outline-text-3" id="text-orgac9b2a8">
+<div id="outline-container-orgc78fe60" class="outline-3">
+<h3 id="orgc78fe60">Not Financial Advice</h3>
+<div class="outline-text-3" id="text-orgc78fe60">
 <p>
 <i>The Content is only for informational purposes and should not be construed as legal, tax, investment, financial, or other advice. Nothing contained on this Site constitutes a solicitation, recommendation, endorsement, or offer to buy or sell any securities or other financial instruments. There are risks associated with investing in securities which include complete loss of capital.</i>
 </p>
 </div>
 </div>
 
-<div id="outline-container-org7054635" class="outline-3">
-<h3 id="org7054635">Conflict of Interest</h3>
-<div class="outline-text-3" id="text-org7054635">
+<div id="outline-container-orgd4c6b23" class="outline-3">
+<h3 id="orgd4c6b23">Conflict of Interest</h3>
+<div class="outline-text-3" id="text-orgd4c6b23">
 <p>
 <i>The author is an active industry professional. For the avoidance of conflicts of interest, no companies that are analysed for the benefit of the employer will be discussed on this site. The author further holds personal positions which will be disclosed when the investment is being discussed.</i>
 </p>
 </div>
 </div>
 
-<div id="outline-container-org882d09c" class="outline-3">
-<h3 id="org882d09c">Monetisation</h3>
-<div class="outline-text-3" id="text-org882d09c">
+<div id="outline-container-orgeb79524" class="outline-3">
+<h3 id="orgeb79524">Monetisation</h3>
+<div class="outline-text-3" id="text-orgeb79524">
 <p>
 <i>This site is not currently in any way monetised.</i>
 </p>
